# llmosafe

./: .gitignore  .moeinclude  AGENTS.md  CHANGELOG.md  Cargo.toml  Cargo.toml.patch  DESIGN_DECISION_v0.5.0.md  LICENSE  MAAT_REPORT.md  MIGRATION-v0.7.5.md  README.md  RECOMMENDATIONS.md  TRAINING.md  build.rs  c_harness  cbindgen.toml  cbindgen.toml.orig  cbindgen_patch.diff  clippy.toml  deny.toml  dummy.rs  invariants.toml  libtest_hash.rlib  patch.diff  patch_lib.sh  rustdoc.toml  test_hash.rs  test_hash_str  test_hash_str.rs  test_perf.patch
.github/ISSUE_TEMPLATE/: 01_bug_report.md  02_feature_request.md  03_security_report.md  04_question.md  config.yml
.github/workflows/: ci.yml  docs.yml  publish-cratesio.yml  publish-pypi.yml  wheels.yml
.ix/: shard.ix
.jules/: bolt.md  sentinel.md
benches/: llmosafe_benchmarks.rs
data/relabel_chunks/: build_labels.py  generate_output.py  relabel_chunk_01.py  relabel_chunk_09.py
examples/: detection_demo.rs  tower_middleware.rs
examples/c_consumer/: main.c
examples/python_consumer/: main.py
include/: llmosafe.h
llmosafe-py/: .gitignore  Cargo.toml  README.md  pyproject.toml
llmosafe-py/llmosafe/: __init__.py
llmosafe-py/llmosafe/tests/: test_llmosafe.py
llmosafe-py/src/: lib.rs
pkg/: PKGBUILD  PKGBUILD.git  llmosafe.pc.in
python/: README.md  pyproject.toml
python-bindings/: Cargo.toml
python-bindings/src/: lib.rs
python/llmosafe/: __init__.py
python/llmosafe/tests/: test_llmosafe.py
src/: control_types.rs  lib.rs  llmosafe_body.rs  llmosafe_classifier.rs  llmosafe_detection.rs  llmosafe_integration.rs  llmosafe_kernel.rs  llmosafe_memory.rs  llmosafe_pid.rs  llmosafe_pipeline.rs  llmosafe_sifter.rs  py_module.rs
tests/: adversarial_proptest.proptest-regressions  adversarial_proptest.rs  concurrent_stress.rs  cross_module_invariants.proptest-regressions  cross_module_invariants.rs  detection_edge_tests.rs  error_path_tests.rs  ffi_roundtrip.proptest-regressions  ffi_roundtrip.rs  integration.rs  kernel_edge_tests.rs  memory_edge_tests.rs  property_tests.rs  security_tests.rs  semantic_tests.rs  sifter_edge_tests.rs  sifter_unified_tests.rs  test_serde.rs  typestate_pipeline.rs  witness_token_invariants.rs
tests/golden/: baseline_spikes.json
tests/witness_token/: compile_fail_bypass_sifter.rs  compile_fail_bypass_sifter.stderr  compile_fail_forge_proof.rs  compile_fail_forge_proof.stderr  compile_fail_forge_validated_proof.rs  compile_fail_forge_validated_proof.stderr  compile_pass_full_pipeline.rs  main.rs
tools/: download_hf_datasets.py  generate_training_data.py  train_full_pipeline.py  train_tfidf_classifier.py
tools/generate_sifter_data/: __init__.py  _rate.py  _test.py  batch.sh  batch_missing.sh  cli.py  config.py  exporter.py  farm.py  filter.py  gen.py  hammer.py  llm_client.py  nv_client.py  run.py  schemas.py  token_bucket.py  validator.py
tools/generate_sifter_data/products/: adversarial_evasion.py  classifier_training.py  hard_negatives.py  keyword_regression.py
tools/generate_sifter_data/prompts/: generation.py
