[package]
name = "llmosafe"
version = "0.7.0"
edition = "2021"
description = "Safety-critical cognitive safety library for AI agents. 4-tier architecture (Resource Body, Kernel, Working Memory, Sifter) with formal verification primitives, detection layer, and integration primitives."
license = "MIT"
repository = "https://github.com/moeshawky/llmosafe"
rust-version = "1.85"
documentation = "https://docs.rs/llmosafe"
readme = "README.md"
homepage = "https://github.com/moeshawky/llmosafe"
keywords = ["safety", "ai-agent", "entropy", "detection", "guardrails"]
categories = ["development-tools", "algorithms", "embedded", "no-std"]
exclude = [".github/", ".sniper/", "target/", "tests/"]

[dependencies]
modular-bitfield = "0.11.2"
libc = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_ProcessStatus", "Win32_Foundation"], optional = true }

[features]
default = ["std"]
std = ["libc", "dep:windows-sys"]
serde = ["dep:serde"]
full = ["std", "serde"]
testing = []

[dev-dependencies]
proptest = "1.5.0"
criterion = "0.5"
trybuild = "1"

[[bench]]
name = "llmosafe_benchmarks"
harness = false

[lib]
name = "llmosafe"
crate-type = ["rlib", "cdylib"]

[lints.clippy]
perf = "warn"
correctness = "deny"
suspicious = "deny"
complexity = "warn"
style = "warn"

[profile.dev]
panic = "abort"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3

[build-dependencies]
cbindgen = "0.26.0"
