[package]
name = "llmosafe"
version = "0.7.6"
edition = "2021"
description = "Safety-critical cognitive safety library for AI agents. 4-tier architecture (Resource Body, Kernel, Working Memory, Sifter) with formal verification primitives, detection layer, and integration primitives."
license = "MIT"
repository = "https://github.com/moeshawky/llmosafe"
rust-version = "1.85"
documentation = "https://docs.rs/llmosafe"
readme = "README.md"
homepage = "https://github.com/moeshawky/llmosafe"
keywords = ["safety", "ai-agent", "entropy", "detection", "guardrails"]
categories = ["development-tools", "algorithms", "embedded", "no-std"]
exclude = [".github/", ".sniper/", "target/", "tests/", "/AGENTS.md", "/data/", "/Cargo.lock", "/DESIGN_DECISION_*.md", "/RECOMMENDATIONS.md"]

[dependencies]
modular-bitfield = "0.11.2"
libc = { version = "0.2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
tracing = { version = "0.1", optional = true }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_ProcessStatus", "Win32_Foundation"], optional = true }

[features]
default = ["std", "dal"]
std = ["libc", "dep:windows-sys", "dep:tracing"]
serde = ["dep:serde"]
full = ["std", "serde", "dal"]
testing = []
dal = []
# `dal` feature: Design Assurance Level safety gate (DO-178C tier A/E). When
# enabled, `apply_safety_overrides()` enforces hard limits: BIAS forces halt
# above halt_gain, EXHAUSTED forces risk=1.0, KERNEL_UNSTABLE forces risk
# above halt_gain. Without `dal`, overrides are a pass-through — no hard
# limits are enforced on PID risk scores. Default ON via `default = ["std", "dal"]`.
# MC/DC: each override flag must independently force Halt regardless of PID output.

[dev-dependencies]
proptest = "1.5.0"
criterion = "0.5"
trybuild = "1"

[[bench]]
name = "llmosafe_benchmarks"
harness = false

[lib]
name = "llmosafe"
crate-type = ["rlib", "cdylib"]

[lints.clippy]
uninlined_format_args = "allow"
no_effect_underscore_binding = "allow"
unreadable_literal = "allow"
doc_markdown = "allow"
# ── Groups (priority -1 so individual allows override) ──
correctness = { level = "deny", priority = -1 }
suspicious = { level = "deny", priority = -1 }
complexity = { level = "deny", priority = -1 }
perf = { level = "deny", priority = -1 }
style = { level = "allow", priority = -1 }
cargo = { level = "allow", priority = -1 }
nursery = { level = "allow", priority = -1 }
pedantic = { level = "allow", priority = -1 }
# ── DO-178C / MISRA-grade individual lints ──
arithmetic_side_effects = "deny"
as_conversions = "allow"
cast_lossless = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
dbg_macro = "deny"
debug_assert_with_mut_call = "deny"
expect_used = "deny"
filetype_is_file = "deny"
float_cmp = "allow"
float_cmp_const = "allow"
get_unwrap = "deny"
indexing_slicing = "allow"
integer_division = "allow"
lossy_float_literal = "deny"
map_err_ignore = "deny"
mem_forget = "deny"
missing_assert_message = "deny"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
missing_safety_doc = "allow"
mod_module_files = "deny"
must_use_candidate = "allow"
mutex_atomic = "deny"
needless_pass_by_value = "allow"
option_if_let_else = "deny"
panic = "allow"
panic_in_result_fn = "allow"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "deny"
rc_mutex = "deny"
redundant_closure_for_method_calls = "deny"
ref_option_ref = "deny"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "deny"
self_named_module_files = "deny"
semicolon_if_nothing_returned = "allow"
shadow_reuse = "allow"
shadow_same = "allow"
shadow_unrelated = "allow"
str_to_string = "deny"
string_add = "deny"
string_add_assign = "deny"
string_lit_as_bytes = "warn"
string_slice = "deny"
todo = "deny"
trailing_empty_array = "deny"
trivially_copy_pass_by_ref = "warn"
unchecked_time_subtraction = "deny"
undocumented_unsafe_blocks = "allow"
unimplemented = "deny"
unnecessary_safety_doc = "deny"
unnecessary_safety_comment = "deny"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "deny"
unused_async = "deny"
unused_self = "deny"
unwrap_used = "allow"
use_debug = "deny"
use_self = "allow"
verbose_bit_mask = "deny"
wildcard_dependencies = "deny"
wildcard_enum_match_arm = "deny"
zero_sized_map_values = "deny"
# ── Explicit allows (intentional, documented exceptions) ──
module_name_repetitions = "allow"
missing_docs_in_private_items = "allow"
needless_raw_strings = "allow"

[lints.rust]
unsafe_code = "allow"
unused_qualifications = "allow"
unused_results = "allow"
missing_copy_implementations = "allow"
missing_debug_implementations = "allow"
unknown_lints = "allow"
trivial_casts = "deny"
trivial_numeric_casts = "deny"
unused_import_braces = "deny"
unused_lifetimes = "deny"
variant_size_differences = "warn"
# modular-bitfield proc macro generates parenthesized field types;
# struct-level #[allow] does not suppress proc-macro-originated warnings.
unused_parens = "allow"
let_underscore_drop = "deny"

[profile.dev]
panic = "abort"

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
opt-level = 3

[build-dependencies]
cbindgen = "0.26.0"
