[package]
name = "llmosafe-py"
version = "0.7.5"
edition = "2021"
description = "Python bindings for llmosafe"
publish = false

[lib]
name = "_llmosafe"
crate-type = ["cdylib"]

[dependencies]
llmosafe = { path = "..", features = ["std", "dal"] }
pyo3 = { version = "0.20", features = ["extension-module"] }
