[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "llmosafe"
version = "0.6.0"
description = "Safety-critical cognitive safety library for AI agents"
authors = [{name = "llmosafe team", email = "llmosafe@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Mature",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Rust",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
keywords = ["safety", "ai-agent", "entropy", "detection", "guardrails", "llm"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "mypy>=1.0"]

[tool.maturin]
manifest-path = "../python-bindings/Cargo.toml"
module-name = "llmosafe._llmosafe"
python-source = "."
features = ["pyo3/extension-module"]
